--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ cluster2-release/
 cluster3-release/
 CMakeFiles/
 
-
 # dot files
 .*
 
@@ -217,3 +216,4 @@ _cmake_vs2019_win64
 /_cmake_linux
 /_cmake_linux_debug
 /_cmake_linux_zig
+_cmake_linux_release
