added libsodium and fixed refactoring issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,9 +89,8 @@ endif()
 
 link_directories($ENV{HOME}/lib)
 
-
-
 find_package(Threads REQUIRED)
+find_package(unofficial-sodium CONFIG REQUIRED)
 
 #define folder structure in vs solution corresponding to real folder structure
 GroupSources("src" ${PROJECT_SOURCE_DIR})
@@ -176,6 +175,7 @@ target_link_libraries(monica_lib
 	climate_common_lib
 	climate_file_io_lib
 	capnp_schemas_lib
+	unofficial-sodium::sodium unofficial-sodium::sodium_config_public
 )
 
 #------------------------------------------------------------------------------
