--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,8 @@ target_link_libraries(monica_lib
 	climate_common_lib
 	climate_file_io_lib
 	capnp_schemas_lib
-	unofficial-sodium::sodium unofficial-sodium::sodium_config_public
+	unofficial-sodium::sodium 
+	unofficial-sodium::sodium_config_public
 )
 
 #------------------------------------------------------------------------------
