refactoring not fully complete and working again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,70 +1,119 @@
 cmake_minimum_required(VERSION 3.12)
-project(monica)
+project(Monica)
+
+message(STATUS "-> Monica")
 
 add_compile_definitions(CAPNPROTO_SERIALIZATION_SUPPORT)
+set(CAPNPROTO_SERIALIZATION_SUPPORT 1)
 add_compile_definitions(NO_MYSQL)
 set(MT_RUNTIME_LIB 1)
 
 #set absolute filenames (to resolve .. in paths)
 macro(set_absolute_path var_name path)
-	get_filename_component(toAbsPath ${path} ABSOLUTE)
-	set(${var_name} ${toAbsPath})
+    get_filename_component(toAbsPath ${path} ABSOLUTE)
+    set(${var_name} ${toAbsPath})
 endmacro(set_absolute_path)
 
-set_absolute_path(MAS_INFRASTRUCTURE_DIR "../mas-infrastructure")
-set_absolute_path(CAPNP_SCHEMAS_DIR "${MAS_INFRASTRUCTURE_DIR}/capnproto_schemas")
+set_absolute_path(MAS_INFRASTRUCTURE_DIR ../mas-infrastructure)
+set_absolute_path(CAPNP_SCHEMAS_DIR ${MAS_INFRASTRUCTURE_DIR}/capnproto_schemas)
 
 if(NOT TARGET capnp_schemas_lib)
-message(STATUS "target: capnp_schemas_lib")
-	add_subdirectory(../mas-infrastructure/capnproto_schemas mas-infrastructure/capnproto_schemas)
+    message(STATUS "target: capnp_schemas_lib")
+    add_subdirectory(${CAPNP_SCHEMAS_DIR} mas-infrastructure/capnproto_schemas)
 endif()
+get_target_property(capnp_schemas_interface_includes capnp_schemas_lib INTERFACE_INCLUDE_DIRECTORIES)
 
-add_subdirectory(../util/tools/date util/date)
-add_subdirectory(../util/tools/helpers util/helpers)
-add_subdirectory(../util/tools/read-ini util/read-ini)
-add_subdirectory(../util/tools/debug util/debug)
-add_subdirectory(../util/climate/climate-file-io util/climate-file-io)
-add_subdirectory(../util/soil util/soil)
-#add_subdirectory(../util/db/db util/db)
-add_subdirectory(../util/zeromq util/zeromq)
+if(NOT TARGET mas_infrastructure_common_lib)
+    message(STATUS "target: mas_infrastructure_common_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/common mas-infrastructure/common)
+endif()
+get_target_property(mas_infrastructure_common_interface_includes mas_infrastructure_common_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+if(NOT TARGET date_lib)
+    message(STATUS "target: date_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/date mas-infrastructure/tools/date)
+endif()
+get_target_property(date_interface_includes date_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+if(NOT TARGET helpers_lib)
+    message(STATUS "target: helpers_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/helpers mas-infrastructure/tools/helpers)
+endif()
+get_target_property(helpers_interface_includes helpers_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+if(NOT TARGET json11_lib)
+    message(STATUS "target: json11_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/json11 mas-infrastructure/json11)
+endif()
+get_target_property(json11_interface_includes json11_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+#if(NOT TARGET read_ini_lib)
+#	message(STATUS "target: read_ini_lib")
+#	add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/read-ini mas-infrastructure/tools/read-ini)
+#endif()
+#get_target_property(read_ini_interface_includes read_ini_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+if(NOT TARGET debug_lib)
+    message(STATUS "target: debug_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/debug mas-infrastructure/tools/debug)
+endif()
+get_target_property(debug_interface_includes debug_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+if(NOT TARGET climate_file_io_lib)
+    message(STATUS "target: climate_file_io_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/climate/climate-file-io mas-infrastructure/climate/climate-file-io)
+endif()
+get_target_property(climate_file_io_interface_includes climate_file_io_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+if(NOT TARGET soil_lib)
+    message(STATUS "target: soil_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/soil mas-infrastructure/soil)
+endif()
+get_target_property(soil_interface_includes soil_lib INTERFACE_INCLUDE_DIRECTORIES)
+
+if(NOT TARGET zeromq_lib)
+    message(STATUS "target: zeromq_lib")
+    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/zeromq mas-infrastructure/zeromq)
+endif()
+get_target_property(zeromq_interface_includes zeromq_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 #define delete file from path
 macro(remove_file list_name file_name)
-	get_filename_component(toAbsPath ${file_name} ABSOLUTE)
-	list(REMOVE_ITEM ${list_name} "${toAbsPath}")
+    get_filename_component(toAbsPath ${file_name} ABSOLUTE)
+    list(REMOVE_ITEM ${list_name} "${toAbsPath}")
 endmacro(remove_file)
 
 #define source_groups 
 macro(GroupSources curdir baseDir)
    file(GLOB children RELATIVE ${baseDir}/${curdir} ${baseDir}/${curdir}/*)
    foreach(child ${children})
-		  if(IS_DIRECTORY ${baseDir}/${curdir}/${child})
-				  GroupSources(${curdir}/${child} ${baseDir})
-		  else()
-				string(REPLACE "/" "\\" groupname ${curdir})
-			source_group(${groupname} FILES ${baseDir}/${curdir}/${child})
-		  endif()
+          if(IS_DIRECTORY ${baseDir}/${curdir}/${child})
+                  GroupSources(${curdir}/${child} ${baseDir})
+          else()
+                string(REPLACE "/" "\\" groupname ${curdir})
+            source_group(${groupname} FILES ${baseDir}/${curdir}/${child})
+          endif()
    endforeach()
 endmacro()
 
 if(MSVC)
-	# disable security warnings in windows
-	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-	
-	# define MS Visual Studio toolset version
-	if(NOT DEFINED MSVC_TOOLSET_VERSION)
-		if(MSVC_VERSION GREATER_EQUAL 1930)
-		  set(MSVC_TOOLSET_VERSION "") # leave unknown for future versions
-		elseif(MSVC_VERSION GREATER_EQUAL 1920)
-		  set(MSVC_TOOLSET_VERSION 142) # VS 2019
-		elseif(MSVC_VERSION GREATER_EQUAL 1910)
-		  set(MSVC_TOOLSET_VERSION 141) # VS 2017
-		elseif(MSVC_VERSION EQUAL 1900)
-		  set(MSVC_TOOLSET_VERSION 14) # VS 2015
-		else()
-		 # we do not support older version
-		endif()
-	endif()
+    # disable security warnings in windows
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+    
+    # define MS Visual Studio toolset version
+    if(NOT DEFINED MSVC_TOOLSET_VERSION)
+        if(MSVC_VERSION GREATER_EQUAL 1930)
+          set(MSVC_TOOLSET_VERSION "") # leave unknown for future versions
+        elseif(MSVC_VERSION GREATER_EQUAL 1920)
+          set(MSVC_TOOLSET_VERSION 142) # VS 2019
+        elseif(MSVC_VERSION GREATER_EQUAL 1910)
+          set(MSVC_TOOLSET_VERSION 141) # VS 2017
+        elseif(MSVC_VERSION EQUAL 1900)
+          set(MSVC_TOOLSET_VERSION 14) # VS 2015
+        else()
+         # we do not support older version
+        endif()
+    endif()
 endif()
 
 # https://cmake.org/cmake/help/latest/prop_tgt/CXX_STANDARD.html
@@ -94,113 +143,132 @@ find_package(unofficial-sodium CONFIG REQUIRED)
 
 #define folder structure in vs solution corresponding to real folder structure
 GroupSources("src" ${PROJECT_SOURCE_DIR})
-GroupSources("util" "${PROJECT_SOURCE_DIR}/..")
+GroupSources("util" ${PROJECT_SOURCE_DIR}/..)
 
 #------------------------------------------------------------------------------
 
 # create monica run static lib to compile code just once
 add_library(monica_lib 
-	src/core/crop.h
-	src/core/crop.cpp
-	src/core/crop-module.h
-	src/core/crop-module.cpp
-	src/core/monica-model.h
-	src/core/monica-model.cpp
-	src/core/monica-parameters.h
-	src/core/monica-parameters.cpp
-	src/core/O3-impact.h
-	src/core/O3-impact.cpp
-	src/core/photosynthesis-FvCB.h
-	src/core/photosynthesis-FvCB.cpp
-	src/core/soilcolumn.h
-	src/core/soilcolumn.cpp
-	src/core/soilmoisture.h
-	src/core/soilmoisture.cpp
-	src/core/frost-component.h
-	src/core/frost-component.cpp
-	src/core/snow-component.h
-	src/core/snow-component.cpp
-	src/core/soilorganic.h
-	src/core/soilorganic.cpp
-	src/core/soiltemperature.h
-	src/core/soiltemperature.cpp
-	src/core/soiltransport.h
-	src/core/soiltransport.cpp
-	src/core/voc-common.h
-	src/core/voc-guenther.h
-	src/core/voc-guenther.cpp
-	src/core/voc-jjv.h
-	src/core/voc-jjv.cpp
-	src/core/stics-nit-denit-n2o.h
-	src/core/stics-nit-denit-n2o.cpp
+    src/core/crop.h
+    src/core/crop.cpp
+    src/core/crop-module.h
+    src/core/crop-module.cpp
+    src/core/monica-model.h
+    src/core/monica-model.cpp
+    src/core/monica-parameters.h
+    src/core/monica-parameters.cpp
+    src/core/O3-impact.h
+    src/core/O3-impact.cpp
+    src/core/photosynthesis-FvCB.h
+    src/core/photosynthesis-FvCB.cpp
+    src/core/soilcolumn.h
+    src/core/soilcolumn.cpp
+    src/core/soilmoisture.h
+    src/core/soilmoisture.cpp
+    src/core/frost-component.h
+    src/core/frost-component.cpp
+    src/core/snow-component.h
+    src/core/snow-component.cpp
+    src/core/soilorganic.h
+    src/core/soilorganic.cpp
+    src/core/soiltemperature.h
+    src/core/soiltemperature.cpp
+    src/core/soiltransport.h
+    src/core/soiltransport.cpp
+    src/core/voc-common.h
+    src/core/voc-guenther.h
+    src/core/voc-guenther.cpp
+    src/core/voc-jjv.h
+    src/core/voc-jjv.cpp
+    src/core/stics-nit-denit-n2o.h
+    src/core/stics-nit-denit-n2o.cpp
 
-	src/io/output.h
-	src/io/output.cpp
-	src/io/build-output.h
-	src/io/build-output.cpp
+    src/io/output.h
+    src/io/output.cpp
+    src/io/build-output.h
+    src/io/build-output.cpp
 
-	src/run/cultivation-method.h
-	src/run/cultivation-method.cpp
-	src/run/run-monica.h
-	src/run/run-monica.cpp
+    src/run/cultivation-method.h
+    src/run/cultivation-method.cpp
+    src/run/run-monica.h
+    src/run/run-monica.cpp
 
-	src/resource/version.h
-	src/resource/version_resource.rc
-
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/rpc-connections.h
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/rpc-connections.cpp
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/common.h
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp/common/common.cpp
+    src/resource/version.h
+    src/resource/version_resource.rc
 )
-target_include_directories(monica_lib PUBLIC 
-	${CMAKE_CURRENT_SOURCE_DIR}/src 
-	${CMAKE_CURRENT_BINARY_DIR} 
-	${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp
-)
-if (MSVC)
-	target_compile_options(monica_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
-endif()
 target_link_libraries(monica_lib
-	${CMAKE_THREAD_LIBS_INIT}
-	${CMAKE_DL_LIBS}
-	read_ini_lib
-	debug_lib
-	helpers_lib
-	date_lib
-	#db_lib
-	soil_lib
-	json11_lib
-	#sqlite3_lib
-	climate_common_lib
-	climate_file_io_lib
-	capnp_schemas_lib
-	unofficial-sodium::sodium 
-	unofficial-sodium::sodium_config_public
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
+    #read_ini_lib
+    debug_lib
+    helpers_lib
+    date_lib
+    soil_lib
+    json11_lib
+    mas_infrastructure_common_lib
+    climate_file_io_lib
+    capnp_schemas_lib
+    unofficial-sodium::sodium 
+    unofficial-sodium::sodium_config_public
 )
+
+message(STATUS "json11_lib_interface_includes:")
+foreach(X ${json11_lib_interface_includes})
+    message(STATUS ${X})
+endforeach()
+
+target_include_directories(monica_lib 
+    INTERFACE
+    ${CMAKE_CURRENT_SOURCE_DIR}/src 
+    #${read_ini_lib_INCLUDE_DIRS}
+    #${debug_interface_includes}/..
+    #${helpers_interface_includes}/..
+    #${date_interface_includes}/..
+    #${soil_interface_includes}/..
+    #${json11_interface_includes}/..
+    #${mas_infrastructure_common_interface_includes}/..
+    #${climate_file_io_interface_includes}/..
+    #${capnp_schemas_interface_includes}
+)
+message(STATUS "monica_lib_interface_includes:")
+get_target_property(monica_lib_interface_includes monica_lib INTERFACE_INCLUDE_DIRECTORIES)
+foreach(X ${monica_lib_interface_includes})
+    message(STATUS ${X})
+endforeach()
+
+message(STATUS "monica_lib_includes:")
+get_target_property(monica_lib_includes monica_lib INCLUDE_DIRECTORIES)
+foreach(X ${monica_lib_includes})
+    message(STATUS ${X})
+endforeach()
+
+
+if (MSVC)
+    target_compile_options(monica_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+endif()
 
 #------------------------------------------------------------------------------
 
 # create monica run static lib to compile code just once
 set(MONICA_RUN_SOURCE_FILES
-	src/io/csv-format.h
-	src/io/csv-format.cpp
-		
-	src/run/env-from-json-config.h
-	src/run/env-from-json-config.cpp
+    src/io/csv-format.h
+    src/io/csv-format.cpp
+        
+    src/run/env-from-json-config.h
+    src/run/env-from-json-config.cpp
 
-	src/run/env-json-from-json-config.h
-	src/run/env-json-from-json-config.cpp
+    src/run/env-json-from-json-config.h
+    src/run/env-json-from-json-config.cpp
 )
 add_library(monica_run_lib ${MONICA_RUN_SOURCE_FILES})
 #target_include_directories(monica_run_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 if (MSVC)
-	target_compile_options(monica_run_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_options(monica_run_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
 target_link_libraries(monica_run_lib
-	${CMAKE_THREAD_LIBS_INIT}
-	${CMAKE_DL_LIBS}
-	monica_lib
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
+    monica_lib
 )
 
 #------------------------------------------------------------------------------
@@ -208,12 +276,12 @@ target_link_libraries(monica_run_lib
 # create monica-run, the non-zeromq cli client, which runs monica locally
 add_executable(monica-run src/run/monica-run-main.cpp)
 if (MSVC)
-	target_compile_options(monica-run PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_options(monica-run PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
 target_link_libraries(monica-run
-	${CMAKE_THREAD_LIBS_INIT}
-	${CMAKE_DL_LIBS}
-	monica_run_lib
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
+    monica_run_lib
 )
 
 #------------------------------------------------------------------------------
@@ -221,96 +289,99 @@ target_link_libraries(monica-run
 # create monica zmq proxy executable for forwarding jobs to monica-zmq-server 
 add_executable(monica-zmq-proxy src/run/monica-zmq-proxy-main.cpp)
 if (MSVC)
-	target_compile_options(monica-zmq-proxy PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_options(monica-zmq-proxy PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
 target_link_libraries(monica-zmq-proxy
-	${CMAKE_THREAD_LIBS_INIT}
-	debug_lib
-	zmq_lib
+    ${CMAKE_THREAD_LIBS_INIT}
+    debug_lib
+    zeromq_lib
 )
 
 #------------------------------------------------------------------------------
 
 # create monica-zmq-server executable, the server running monica via zeromq requests
 set(MONICA_ZMQ_SERVER_SOURCE
-	src/run/serve-monica-zmq.h
-	src/run/serve-monica-zmq.cpp
-	src/run/monica-zmq-server-main.cpp
+    src/run/serve-monica-zmq.h
+    src/run/serve-monica-zmq.cpp
+    src/run/monica-zmq-server-main.cpp
 )
 add_executable(monica-zmq-server ${MONICA_ZMQ_SERVER_SOURCE})
 if (MSVC)
-	target_compile_options(monica-zmq-server PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_options(monica-zmq-server PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
 target_link_libraries(monica-zmq-server
-	${CMAKE_THREAD_LIBS_INIT}
-	${CMAKE_DL_LIBS}
-	monica_lib
-	zmq_lib
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
+    monica_lib
+    zeromq_lib
 )
 
 #------------------------------------------------------------------------------
 
 # create monica-capnp-server executable, the server running monica via CapNProto RPC
 set(MONICA_CAPNP_SERVER_SOURCE_FILES
-	src/run/monica-capnp-server-main.cpp
-	src/run/run-monica-capnp.h
-	src/run/run-monica-capnp.cpp
+    src/run/monica-capnp-server-main.cpp
+    src/run/run-monica-capnp.h
+    src/run/run-monica-capnp.cpp
 )
 add_executable(monica-capnp-server ${MONICA_CAPNP_SERVER_SOURCE_FILES})
 target_link_libraries(monica-capnp-server
-	${CMAKE_THREAD_LIBS_INIT}
-	${CMAKE_DL_LIBS}
-	monica_lib
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
+    monica_lib
 )
-target_include_directories(monica-capnp-server PRIVATE 
-	${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp
-)
+#target_include_directories(monica-capnp-server PRIVATE 
+    #${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
+    #${MAS_INFRASTRUCTURE_DIR}/src/cpp
+#)
 if (MSVC)
-	target_compile_options(monica-capnp-server PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_options(monica-capnp-server PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
 
 #------------------------------------------------------------------------------
 
 # create monica-capnp-proxy executable, a server forwarding monica CapNProto RPC requests to registered monica instances
 set(MONICA_CAPNP_PROXY_SOURCE_FILES
-	src/run/monica-capnp-proxy-main.cpp
-	src/run/run-monica-capnp.h
-	src/run/run-monica-capnp.cpp
+    src/run/monica-capnp-proxy-main.cpp
+    src/run/run-monica-capnp.h
+    src/run/run-monica-capnp.cpp
 )
 add_executable(monica-capnp-proxy ${MONICA_CAPNP_PROXY_SOURCE_FILES})
 target_link_libraries(monica-capnp-proxy
-	${CMAKE_THREAD_LIBS_INIT}
-	${CMAKE_DL_LIBS}
-	monica_lib
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
+    monica_lib
 )
-target_include_directories(monica-capnp-proxy PRIVATE 
-	${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp
-)
+#target_include_directories(monica-capnp-proxy PRIVATE 
+#	${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
+#	${MAS_INFRASTRUCTURE_DIR}/src/cpp
+#)
 if (MSVC)
-	target_compile_options(monica-capnp-proxy PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_options(monica-capnp-proxy PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
 
 #------------------------------------------------------------------------------
 
 # create monica-capnp-server executable, the server running monica via CapNProto RPC
 set(MONICA_CAPNP_FBP_SOURCE_FILES
-	src/run/monica-capnp-fbp-component-main.cpp
-	src/run/run-monica-capnp.h
-	src/run/run-monica-capnp.cpp
+    src/run/monica-capnp-fbp-component-main.cpp
+    src/run/run-monica-capnp.h
+    src/run/run-monica-capnp.cpp
 )
 add_executable(monica-capnp-fbp-component ${MONICA_CAPNP_FBP_SOURCE_FILES})
 target_link_libraries(monica-capnp-fbp-component
-	${CMAKE_THREAD_LIBS_INIT}
-	${CMAKE_DL_LIBS}
-	monica_lib
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CMAKE_DL_LIBS}
+    monica_lib
 )
-target_include_directories(monica-capnp-fbp-component PRIVATE 
-	${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
-	${MAS_INFRASTRUCTURE_DIR}/src/cpp
-)
+#target_include_directories(monica-capnp-fbp-component PRIVATE 
+#    ${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
+#    ${MAS_INFRASTRUCTURE_DIR}/src/cpp
+#)
 if (MSVC)
-	target_compile_options(monica-capnp-fbp-component PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_options(monica-capnp-fbp-component PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
 
+#------------------------------------------------------------------------------
+
+message(STATUS "<- Monica")
