--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,31 +21,26 @@ if(NOT TARGET capnp_schemas_lib)
     message(STATUS "target: capnp_schemas_lib")
     add_subdirectory(${CAPNP_SCHEMAS_DIR} mas-infrastructure/capnproto_schemas)
 endif()
-get_target_property(capnp_schemas_interface_includes capnp_schemas_lib INTERFACE_INCLUDE_DIRECTORIES)
 
-if(NOT TARGET mas_infrastructure_common_lib)
-    message(STATUS "target: mas_infrastructure_common_lib")
+if(NOT TARGET common_lib)
+    message(STATUS "target: common_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/common mas-infrastructure/common)
 endif()
-get_target_property(mas_infrastructure_common_interface_includes mas_infrastructure_common_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 if(NOT TARGET date_lib)
     message(STATUS "target: date_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/date mas-infrastructure/tools/date)
 endif()
-get_target_property(date_interface_includes date_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 if(NOT TARGET helpers_lib)
     message(STATUS "target: helpers_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/helpers mas-infrastructure/tools/helpers)
 endif()
-get_target_property(helpers_interface_includes helpers_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 if(NOT TARGET json11_lib)
     message(STATUS "target: json11_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/json11 mas-infrastructure/json11)
 endif()
-get_target_property(json11_interface_includes json11_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 #if(NOT TARGET read_ini_lib)
 #	message(STATUS "target: read_ini_lib")
@@ -57,25 +52,21 @@ if(NOT TARGET debug_lib)
     message(STATUS "target: debug_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/debug mas-infrastructure/tools/debug)
 endif()
-get_target_property(debug_interface_includes debug_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 if(NOT TARGET climate_file_io_lib)
     message(STATUS "target: climate_file_io_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/climate/climate-file-io mas-infrastructure/climate/climate-file-io)
 endif()
-get_target_property(climate_file_io_interface_includes climate_file_io_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 if(NOT TARGET soil_lib)
     message(STATUS "target: soil_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/soil mas-infrastructure/soil)
 endif()
-get_target_property(soil_interface_includes soil_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 if(NOT TARGET zeromq_lib)
     message(STATUS "target: zeromq_lib")
     add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/zeromq mas-infrastructure/zeromq)
 endif()
-get_target_property(zeromq_interface_includes zeromq_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 #define delete file from path
 macro(remove_file list_name file_name)
@@ -139,7 +130,7 @@ endif()
 link_directories($ENV{HOME}/lib)
 
 find_package(Threads REQUIRED)
-find_package(unofficial-sodium CONFIG REQUIRED)
+#find_package(unofficial-sodium CONFIG REQUIRED)
 
 #define folder structure in vs solution corresponding to real folder structure
 GroupSources("src" ${PROJECT_SOURCE_DIR})
@@ -197,51 +188,42 @@ add_library(monica_lib
     src/resource/version_resource.rc
 )
 target_link_libraries(monica_lib
+    PUBLIC
     ${CMAKE_THREAD_LIBS_INIT}
     ${CMAKE_DL_LIBS}
+    capnp_schemas_lib
     #read_ini_lib
     debug_lib
     helpers_lib
     date_lib
     soil_lib
     json11_lib
-    mas_infrastructure_common_lib
+    common_lib
     climate_file_io_lib
-    capnp_schemas_lib
-    unofficial-sodium::sodium 
-    unofficial-sodium::sodium_config_public
+    #unofficial-sodium::sodium 
+    #unofficial-sodium::sodium_config_public
 )
 
-message(STATUS "json11_lib_interface_includes:")
-foreach(X ${json11_lib_interface_includes})
-    message(STATUS ${X})
-endforeach()
+#message(STATUS "json11_lib_interface_includes:")
+#foreach(X ${json11_lib_interface_includes})
+#    message(STATUS ${X})
+#endforeach()
 
 target_include_directories(monica_lib 
-    INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src 
-    #${read_ini_lib_INCLUDE_DIRS}
-    #${debug_interface_includes}/..
-    #${helpers_interface_includes}/..
-    #${date_interface_includes}/..
-    #${soil_interface_includes}/..
-    #${json11_interface_includes}/..
-    #${mas_infrastructure_common_interface_includes}/..
-    #${climate_file_io_interface_includes}/..
-    #${capnp_schemas_interface_includes}
+    PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
-message(STATUS "monica_lib_interface_includes:")
-get_target_property(monica_lib_interface_includes monica_lib INTERFACE_INCLUDE_DIRECTORIES)
-foreach(X ${monica_lib_interface_includes})
-    message(STATUS ${X})
-endforeach()
+#message(STATUS "monica_lib_interface_includes:")
+#get_target_property(monica_lib_interface_includes monica_lib INTERFACE_INCLUDE_DIRECTORIES)
+#foreach(X ${monica_lib_interface_includes})
+#    message(STATUS ${X})
+#endforeach()
 
-message(STATUS "monica_lib_includes:")
-get_target_property(monica_lib_includes monica_lib INCLUDE_DIRECTORIES)
-foreach(X ${monica_lib_includes})
-    message(STATUS ${X})
-endforeach()
-
+#message(STATUS "monica_lib_includes:")
+#get_target_property(monica_lib_includes monica_lib INCLUDE_DIRECTORIES)
+#foreach(X ${monica_lib_includes})
+#    message(STATUS ${X})
+#endforeach()
 
 if (MSVC)
     target_compile_options(monica_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
@@ -250,7 +232,8 @@ endif()
 #------------------------------------------------------------------------------
 
 # create monica run static lib to compile code just once
-set(MONICA_RUN_SOURCE_FILES
+
+add_library(monica_run_lib 
     src/io/csv-format.h
     src/io/csv-format.cpp
         
@@ -260,80 +243,68 @@ set(MONICA_RUN_SOURCE_FILES
     src/run/env-json-from-json-config.h
     src/run/env-json-from-json-config.cpp
 )
-add_library(monica_run_lib ${MONICA_RUN_SOURCE_FILES})
+
+target_link_libraries(monica_run_lib monica_lib)
+
 #target_include_directories(monica_run_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 if (MSVC)
     target_compile_options(monica_run_lib PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
-target_link_libraries(monica_run_lib
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${CMAKE_DL_LIBS}
-    monica_lib
-)
 
 #------------------------------------------------------------------------------
 
 # create monica-run, the non-zeromq cli client, which runs monica locally
 add_executable(monica-run src/run/monica-run-main.cpp)
+
+target_link_libraries(monica-run monica_run_lib)
+
 if (MSVC)
     target_compile_options(monica-run PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
-target_link_libraries(monica-run
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${CMAKE_DL_LIBS}
-    monica_run_lib
-)
 
 #------------------------------------------------------------------------------
 
 # create monica zmq proxy executable for forwarding jobs to monica-zmq-server 
 add_executable(monica-zmq-proxy src/run/monica-zmq-proxy-main.cpp)
-if (MSVC)
-    target_compile_options(monica-zmq-proxy PRIVATE "/MT$<$<CONFIG:Debug>:d>")
-endif()
+
 target_link_libraries(monica-zmq-proxy
-    ${CMAKE_THREAD_LIBS_INIT}
     debug_lib
     zeromq_lib
 )
 
+if (MSVC)
+    target_compile_options(monica-zmq-proxy PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+endif()
+
 #------------------------------------------------------------------------------
 
 # create monica-zmq-server executable, the server running monica via zeromq requests
-set(MONICA_ZMQ_SERVER_SOURCE
+add_executable(monica-zmq-server 
     src/run/serve-monica-zmq.h
     src/run/serve-monica-zmq.cpp
     src/run/monica-zmq-server-main.cpp
 )
-add_executable(monica-zmq-server ${MONICA_ZMQ_SERVER_SOURCE})
-if (MSVC)
-    target_compile_options(monica-zmq-server PRIVATE "/MT$<$<CONFIG:Debug>:d>")
-endif()
+
 target_link_libraries(monica-zmq-server
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${CMAKE_DL_LIBS}
     monica_lib
     zeromq_lib
 )
 
+if (MSVC)
+    target_compile_options(monica-zmq-server PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+endif()
+
 #------------------------------------------------------------------------------
 
 # create monica-capnp-server executable, the server running monica via CapNProto RPC
-set(MONICA_CAPNP_SERVER_SOURCE_FILES
+add_executable(monica-capnp-server 
     src/run/monica-capnp-server-main.cpp
     src/run/run-monica-capnp.h
     src/run/run-monica-capnp.cpp
 )
-add_executable(monica-capnp-server ${MONICA_CAPNP_SERVER_SOURCE_FILES})
-target_link_libraries(monica-capnp-server
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${CMAKE_DL_LIBS}
-    monica_lib
-)
-#target_include_directories(monica-capnp-server PRIVATE 
-    #${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
-    #${MAS_INFRASTRUCTURE_DIR}/src/cpp
-#)
+
+target_link_libraries(monica-capnp-server monica_lib)
+
 if (MSVC)
     target_compile_options(monica-capnp-server PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
@@ -341,21 +312,14 @@ endif()
 #------------------------------------------------------------------------------
 
 # create monica-capnp-proxy executable, a server forwarding monica CapNProto RPC requests to registered monica instances
-set(MONICA_CAPNP_PROXY_SOURCE_FILES
+add_executable(monica-capnp-proxy 
     src/run/monica-capnp-proxy-main.cpp
     src/run/run-monica-capnp.h
     src/run/run-monica-capnp.cpp
 )
-add_executable(monica-capnp-proxy ${MONICA_CAPNP_PROXY_SOURCE_FILES})
-target_link_libraries(monica-capnp-proxy
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${CMAKE_DL_LIBS}
-    monica_lib
-)
-#target_include_directories(monica-capnp-proxy PRIVATE 
-#	${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
-#	${MAS_INFRASTRUCTURE_DIR}/src/cpp
-#)
+
+target_link_libraries(monica-capnp-proxy monica_lib)
+
 if (MSVC)
     target_compile_options(monica-capnp-proxy PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
@@ -363,21 +327,14 @@ endif()
 #------------------------------------------------------------------------------
 
 # create monica-capnp-server executable, the server running monica via CapNProto RPC
-set(MONICA_CAPNP_FBP_SOURCE_FILES
+add_executable(monica-capnp-fbp-component 
     src/run/monica-capnp-fbp-component-main.cpp
     src/run/run-monica-capnp.h
     src/run/run-monica-capnp.cpp
 )
-add_executable(monica-capnp-fbp-component ${MONICA_CAPNP_FBP_SOURCE_FILES})
-target_link_libraries(monica-capnp-fbp-component
-    ${CMAKE_THREAD_LIBS_INIT}
-    ${CMAKE_DL_LIBS}
-    monica_lib
-)
-#target_include_directories(monica-capnp-fbp-component PRIVATE 
-#    ${CMAKE_CURRENT_BINARY_DIR}/mas-infrastructure/capnproto_schemas
-#    ${MAS_INFRASTRUCTURE_DIR}/src/cpp
-#)
+
+target_link_libraries(monica-capnp-fbp-component monica_lib)
+
 if (MSVC)
     target_compile_options(monica-capnp-fbp-component PRIVATE "/MT$<$<CONFIG:Debug>:d>")
 endif()
