--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
 
-  build:
+  docker:
 
     runs-on: ubuntu-latest
 
@@ -16,12 +16,7 @@ jobs:
           uses: actions/checkout@v3
 
         - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-
-        - name: Build the Docker image
-          # build docker image, to check if it works
-          run: docker build . --file Dockerfile --tag zalfrpm/monica-cluster:$(date +%s)
-            # push docker image to docker hub
+          uses: docker/setup-buildx-action@v2
 
         # login to docker hub
         - name: Login to DockerHub
@@ -31,11 +26,12 @@ jobs:
             password: ${{ secrets.DOCKER_PASSWORD }}
             
         - name: Build and push Docker image
-          uses: docker/build-push-action@v2
+          uses: docker/build-push-action@v4
           with:
               context: .
               push: true
-              tags: zalfrpm/monica-cluster:${{ github.ref }}    
+              # push with just the tag
+              tags: zalfrpm/monica-cluster:${{ github.ref_name }}    
 
         - name: Create GitHub release
           id: create_release
