--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -44,10 +44,10 @@ jobs:
           .\vcpkg\vcpkg integrate install
 
       - name: Create build folder and Configure CMake
-        working-directory: /
+        working-directory: /monica
         run: |
-          mkdir monica/_cmake_win64
-          cd monica/_cmake_win64
+          mkdir _cmake_win64
+          cd _cmake_win64
           cmake -G "Visual Studio 17 2022" .. -DCMAKE_TOOLCHAIN_FILE=../../vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static 
       
       - name: Build Monica
