--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          path: main
+          path: "monica"
 
       # dependent repository mas-infrastructure
       - name: Checkout dependent repository
@@ -54,9 +54,11 @@ jobs:
       - name: Create build folder 
         run: |
             mkdir _cmake_win64
+
       - name: Configure CMake
         working-directory: /monica/_cmake_win64
         run: |
+            echo ${{ github.workspace }}
             cmake -G "Visual Studio 17 2022" .. -DCMAKE_TOOLCHAIN_FILE=../../vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static 
         
       - name: Build Monica
