--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -47,22 +47,26 @@ jobs:
       - name: Install vcpkg dependencies
         working-directory: /
         run: |
+          echo ${{ github.workspace }}
+          pwd
           .\vcpkg\bootstrap-vcpkg.bat
           .\vcpkg\vcpkg install zeromq:x64-windows-static capnproto:x64-windows-static libsodium:x64-windows-static
           .\vcpkg\vcpkg integrate install
 
       - name: Create build folder 
         run: |
+            pwd
             mkdir _cmake_win64
 
       - name: Configure CMake
-        working-directory: /monica/_cmake_win64
+        working-directory: ./_cmake_win64
         run: |
             echo ${{ github.workspace }}
+            pwd
             cmake -G "Visual Studio 17 2022" .. -DCMAKE_TOOLCHAIN_FILE=../../vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static 
         
       - name: Build Monica
-        working-directory: /monica/_cmake_win64
+        working-directory: ./_cmake_win64
         run: |
             msbuild _cmake_win64/Monica.sln /p:Configuration=Release /p:Platform=\"x64\"
 
