--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          path: "/monica"
+          path: "monica"
 
       # dependent repository mas-infrastructure
       - name: Checkout dependent repository
