--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -33,13 +33,140 @@ jobs:
               # push with just the tag
               tags: zalfrpm/monica-cluster:${{ github.ref_name }}    
 
-        - name: Create GitHub release
-          id: create_release
-          uses: actions/create-release@v1
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            tag_name: ${{ github.ref }}
-            release_name: Release ${{ github.ref }}
-            draft: true
-            prerelease: false
+
+  # create a follow up job to build on windows
+  windows:
+    runs-on: windows-latest
+  
+    steps:
+      # main repository monica
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          path: "monica"
+  
+      # dependent repository mas-infrastructure
+      - name: Checkout dependent repository
+        uses: actions/checkout@v3
+        with:
+          repository: zalf-rpm/mas-infrastructure
+          ref: master
+          path: "mas-infrastructure"
+  
+      - name: Checkout dependent repository
+        uses: actions/checkout@v3
+        with:
+          repository: zalf-rpm/monica-parameters
+          ref: master 
+          path: "monica-parameters"
+  
+      - name: Checkout vcpkg
+        uses: actions/checkout@v3
+        with:
+          repository: microsoft/vcpkg
+          ref: master 
+          path: "vcpkg"
+  
+      - name: Set up MSVC compiler
+        uses: microsoft/setup-msbuild@v1.1
+        with:
+          vs-version: '17.5'
+          msbuild-architecture: 'x64'
+  
+      - name: Install vcpkg dependencies
+        run: |
+          pwd
+          .\vcpkg\bootstrap-vcpkg.bat
+          .\vcpkg\vcpkg install zeromq:x64-windows-static capnproto:x64-windows-static libsodium:x64-windows-static
+  
+      - name: Create build folder 
+        working-directory: ./monica
+        run: |
+            mkdir _cmake_win64
+  
+      - name: Configure CMake
+        working-directory: ./monica/_cmake_win64
+        run: |
+            cmake -G "Visual Studio 17 2022" .. -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static 
+        
+      - name: Build Monica
+        working-directory: ./monica/_cmake_win64
+        run: |
+            msbuild Monica.sln /p:Configuration=Release /p:Platform=x64
+  
+      - name: package Monica  
+        run: |
+          mkdir monica_${{ github.ref_name }}
+          mkdir monica_${{ github.ref_name }}/bin
+          mkdir monica_${{ github.ref_name }}/bin/soil
+          mkdir monica_${{ github.ref_name }}/monica-parameters
+          mkdir monica_${{ github.ref_name }}/MONICA
+          mkdir monica_${{ github.ref_name }}/MONICA/monica-ini-to-json
+          mkdir monica_${{ github.ref_name }}/MONICA/Examples
+          mkdir monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2
+          cp monica-parameters/soil/CapillaryRiseRates.sercapnp monica_${{ github.ref_name }}/bin/soil/
+          cp monica-parameters/soil/SoilCharacteristicData.sercapnp monica_${{ github.ref_name }}/bin/soil/
+          cp monica-parameters/soil/SoilCharacteristicModifier.sercapnp monica_${{ github.ref_name }}/bin/soil/
+          cp monica/_cmake_win64/Release/monica-run.exe monica_${{ github.ref_name }}/bin/
+          cp monica/_cmake_win64/Release/monica-zmq-proxy.exe monica_${{ github.ref_name }}/bin/
+          cp monica/_cmake_win64/Release/monica-zmq-server.exe monica_${{ github.ref_name }}/bin/
+          cp monica/_cmake_win64/Release/monica-capnp-server.exe monica_${{ github.ref_name }}/bin/
+          cp monica/_cmake_win64/Release/monica-capnp-proxy.exe monica_${{ github.ref_name }}/bin/
+          cp -r monica-parameters monica_${{ github.ref_name }}/monica-parameters/          
+  
+          cp monica/LICENSE monica_${{ github.ref_name }}/bin/
+          cp monica/documentation/de_benutzerhandbuch_MONICA_windows.pdf monica_${{ github.ref_name }}/bin/
+          cp monica/documentation/en_user_manual_MONICA_windows.pdf monica_${{ github.ref_name }}/bin/
+          cp monica/src/python/monica_io3.py monica_${{ github.ref_name }}/bin/
+          cp mas-infrastructure/src/python/services/soil/soil_io3.py monica_${{ github.ref_name }}/bin/
+  
+          cp monica/src/python/monica-ini-to-json/monica-ini-to-json.py monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-sim.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-site.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-crop.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
+  
+          cp -r monica-parameters/crop-residues monica_${{ github.ref_name }}/monica-parameters/
+          cp -r monica-parameters/crops monica_${{ github.ref_name }}/monica-parameters/
+          cp -r monica-parameters/mineral-fertilisers monica_${{ github.ref_name }}/monica-parameters/
+          cp -r monica-parameters/organic-fertilisers monica_${{ github.ref_name }}/monica-parameters/
+          cp -r monica-parameters/general monica_${{ github.ref_name }}/monica-parameters/
+          cp -r monica-parameters/soil monica_${{ github.ref_name }}/monica-parameters/
+  
+          cp monica/installer/Hohenfinow2/crop-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop-min-ic.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/site-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim-min-ic.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/climate-min.csv monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/site.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/site+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/climate.csv monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+  
+          tar -c -z -f monica_win64_${{ github.ref_name }}.zip monica_${{ github.ref_name }}
+  
+      - name: Create GitHub release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: true
+          prerelease: false
+          
+      - name: Upload executable
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./monica_win64_${{ github.ref_name }}.zip
+          asset_name: monica_win64_${{ github.ref_name }}.zip
+          asset_content_type: application/octet-stream
+
+
