--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -98,12 +98,12 @@ jobs:
         run: |
           mkdir monica_${{ github.ref_name }}
           mkdir monica_${{ github.ref_name }}/bin
+          mkdir monica_${{ github.ref_name }}/documentation
           mkdir monica_${{ github.ref_name }}/bin/soil
           mkdir monica_${{ github.ref_name }}/monica-parameters
-          mkdir monica_${{ github.ref_name }}/MONICA
-          mkdir monica_${{ github.ref_name }}/MONICA/monica-ini-to-json
-          mkdir monica_${{ github.ref_name }}/MONICA/Examples
-          mkdir monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2
+          mkdir monica_${{ github.ref_name }}/bin/monica-ini-to-json
+          mkdir monica_${{ github.ref_name }}/Examples
+          mkdir monica_${{ github.ref_name }}/Examples/Hohenfinow2
           cp monica-parameters/soil/CapillaryRiseRates.sercapnp monica_${{ github.ref_name }}/bin/soil/
           cp monica-parameters/soil/SoilCharacteristicData.sercapnp monica_${{ github.ref_name }}/bin/soil/
           cp monica-parameters/soil/SoilCharacteristicModifier.sercapnp monica_${{ github.ref_name }}/bin/soil/
@@ -115,15 +115,15 @@ jobs:
           cp -r monica-parameters monica_${{ github.ref_name }}/monica-parameters/          
   
           cp monica/LICENSE monica_${{ github.ref_name }}/bin/
-          cp monica/documentation/de_benutzerhandbuch_MONICA_windows.pdf monica_${{ github.ref_name }}/bin/
-          cp monica/documentation/en_user_manual_MONICA_windows.pdf monica_${{ github.ref_name }}/bin/
+          cp monica/documentation/de_benutzerhandbuch_MONICA_windows.pdf monica_${{ github.ref_name }}/documentation/
+          cp monica/documentation/en_user_manual_MONICA_windows.pdf monica_${{ github.ref_name }}/documentation/
           cp monica/src/python/monica_io3.py monica_${{ github.ref_name }}/bin/
           cp mas-infrastructure/src/python/services/soil/soil_io3.py monica_${{ github.ref_name }}/bin/
   
-          cp monica/src/python/monica-ini-to-json/monica-ini-to-json.py monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
-          cp monica/src/python/monica-ini-to-json/conversion-template-sim.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
-          cp monica/src/python/monica-ini-to-json/conversion-template-site.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
-          cp monica/src/python/monica-ini-to-json/conversion-template-crop.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/monica-ini-to-json.py monica_${{ github.ref_name }}/bin/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-sim.json monica_${{ github.ref_name }}/bin/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-site.json monica_${{ github.ref_name }}/bin/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-crop.json monica_${{ github.ref_name }}/bin/monica-ini-to-json/
   
           cp -r monica-parameters/crop-residues monica_${{ github.ref_name }}/monica-parameters/
           cp -r monica-parameters/crops monica_${{ github.ref_name }}/monica-parameters/
@@ -132,41 +132,33 @@ jobs:
           cp -r monica-parameters/general monica_${{ github.ref_name }}/monica-parameters/
           cp -r monica-parameters/soil monica_${{ github.ref_name }}/monica-parameters/
   
-          cp monica/installer/Hohenfinow2/crop-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop-min-ic.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim-min-ic.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/climate-min.csv monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/climate.csv monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop-min.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop-min-ic.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/site-min.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim-min.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim-min-ic.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/climate-min.csv monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/site.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop+.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/site+.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/sim+.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/climate.csv monica_${{ github.ref_name }}/Examples/Hohenfinow2/
   
-          tar -c -z -f monica_win64_${{ github.ref_name }}.zip monica_${{ github.ref_name }}
+          tar -c -z -f monica_win64_${{ github.ref_name }}.tar.gz monica_${{ github.ref_name }}
   
-      - name: Create GitHub release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
-          prerelease: false
-          
+          tag: ${{ github.ref_name }}
+        run: |
+          gh release create ${{ github.ref_name }} --draft --title="Monica ${{ github.ref_name }}" 
+ 
       - name: Upload executable
-        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./monica_win64_${{ github.ref_name }}.zip
-          asset_name: monica_win64_${{ github.ref_name }}.zip
-          asset_content_type: application/octet-stream
-
-
+          tag: ${{ github.ref_name }}
+        run: |
+          gh release upload ${{ github.ref_name }} monica_win64_${{ github.ref_name }}.tar.gz
+ 
