--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -102,8 +102,9 @@ jobs:
           mkdir monica_${{ github.ref_name }}/bin/soil
           mkdir monica_${{ github.ref_name }}/monica-parameters
           mkdir monica_${{ github.ref_name }}/bin/monica-ini-to-json
-          mkdir monica_${{ github.ref_name }}/Examples
-          mkdir monica_${{ github.ref_name }}/Examples/Hohenfinow2
+          mkdir monica_${{ github.ref_name }}/examples
+          mkdir monica_${{ github.ref_name }}/examples/Hohenfinow2-min
+          mkdir monica_${{ github.ref_name }}/examples/Hohenfinow2-min/python
           cp monica-parameters/soil/CapillaryRiseRates.sercapnp monica_${{ github.ref_name }}/bin/soil/
           cp monica-parameters/soil/SoilCharacteristicData.sercapnp monica_${{ github.ref_name }}/bin/soil/
           cp monica-parameters/soil/SoilCharacteristicModifier.sercapnp monica_${{ github.ref_name }}/bin/soil/
@@ -132,21 +133,17 @@ jobs:
           cp -r monica-parameters/general monica_${{ github.ref_name }}/monica-parameters/
           cp -r monica-parameters/soil monica_${{ github.ref_name }}/monica-parameters/
   
-          cp monica/installer/Hohenfinow2/crop-min.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop-min-ic.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site-min.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim-min.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim-min-ic.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/climate-min.csv monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop+.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site+.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim+.json monica_${{ github.ref_name }}/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/climate.csv monica_${{ github.ref_name }}/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop-min.json monica_${{ github.ref_name }}/examples/Hohenfinow2-min/
+          cp monica/installer/Hohenfinow2/site-min.json monica_${{ github.ref_name }}/examples/Hohenfinow2-min/
+          cp monica/installer/Hohenfinow2/sim-min.json monica_${{ github.ref_name }}/examples/Hohenfinow2-min/
+          cp monica/installer/Hohenfinow2/climate-min.csv monica_${{ github.ref_name }}/examples/Hohenfinow2-min/
+          cp monica/installer/Hohenfinow2/python/run-producer.py monica_${{ github.ref_name }}/examples/Hohenfinow2-min/python/
+          cp monica/installer/Hohenfinow2/python/run-consumer.py monica_${{ github.ref_name }}/examples/Hohenfinow2-min/python/
+          cp monica/installer/Hohenfinow2/python/start_monica_server.cmd monica_${{ github.ref_name }}/examples/Hohenfinow2-min/python/
+          cp mas-infrastructure/src/python/services/soil/soil_io3.py monica_${{ github.ref_name }}/examples/Hohenfinow2-min/python/
+          cp monica/src/python/monica_io3.py monica_${{ github.ref_name }}/examples/Hohenfinow2-min/python/
   
-          tar -c -z -f monica_win64_${{ github.ref_name }}.tar.gz monica_${{ github.ref_name }}
+          Compress-Archive -Path monica_${{ github.ref_name }}/* -Destination monica_win64_${{ github.ref_name }}.zip
   
       - name: Create release
         working-directory: ./monica
@@ -162,5 +159,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref_name }}
         run: |
-          gh release upload ${{ github.ref_name }} ${{ github.workspace }}/monica_win64_${{ github.ref_name }}.tar.gz
+          gh release upload ${{ github.ref_name }} ${{ github.workspace }}/monica_win64_${{ github.ref_name }}.zip
  
